<resources>
    <string name="app_name">Haazir</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home Screen</string>
    <string name="next">Next</string>

    <string name="hello_first_fragment">Home Screen</string>
    <string name="permission_granted">Permission granted successfuly</string>
    <string name="permission_required">Camera Permission is Required</string>
    <string name="ok">Ok</string>
    <!-- Strings related to login -->
    <string name="or">or</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_register_short">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_employee_number">Invalid Employee Number</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_name">Name cannot be empty</string>
    <string name="invalid_gender">Please select gender</string>
    <string name="invalid_number">Invalid phone number</string>
    <string name="invalid_address">Address cannot be empty</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_sending_failed">"Failed to send e-mail not a valid Employee Number"</string>
    <string name="email_sent">Email sent Successfully</string>
    <string name="action_logout">"Logout"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="calender_info">Select date using datepicker</string>
    <string name="slider_check_in">Slide Right to Check-In</string>
    <string name="slider_check_out">Slide Left to Check-Out</string>
    <string name="attendance_successful">Attendance Marked &#128077;</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
</resources>